2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/romfs.c (grub_romfs_mount): Fix pointer comparison
	overflow.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/squash4.c (grub_squash_inode): Fix field sizes.
	(grub_squash_dirent_header): Likewise.
	(read_chunk): Don't double swap.
	(grub_squash_iterate_dir): Fix swap sizes.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/jfs.c (grub_jfs_getent): Handle UTF16 endianness.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/hfs.c (grub_hfs_find_node): Handle unaligned keys.
	(grub_hfs_iterate_dir): Likewise.

2011-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix video on platforms where unaligned access is forbidden.
	Make several optimisations while on it.

	* grub-core/video/fb/fbblit.c (grub_video_fbblit_replace_directN):
	Optimise and use GRUB_VIDEO_FB_ADVANCE_POINTER.
	(grub_video_fbblit_replace_32bit_1bit): Likewise.
	(grub_video_fbblit_replace_24bit_1bit) [!GRUB_HAVE_UNALIGNED_ACCESS]:
	Disable.
	(grub_video_fbblit_replace_16bit_1bit):
	Optimise and use GRUB_VIDEO_FB_ADVANCE_POINTER.
	(grub_video_fbblit_replace_8bit_1bit): Likewise.
	(grub_video_fbblit_replace_BGRX8888_RGBX8888): Likewise.
	(grub_video_fbblit_replace_BGRX8888_RGB888): Likewise.
	(grub_video_fbblit_replace_BGR888_RGBX8888): Likewise.
	(grub_video_fbblit_replace_BGR888_RGBX8888): Likewise.
	(grub_video_fbblit_replace_BGR888_RGB888): Likewise.
	(grub_video_fbblit_replace_RGBX8888_RGB88): Likewise.
	(grub_video_fbblit_replace_RGB888_RGBX888): Likewise.
	(grub_video_fbblit_replace_RGB888_RGBX8888): Likewise.
	(grub_video_fbblit_replace_index_RGBX8888): Likewise.
	(grub_video_fbblit_replace_index_RGB888): Likewise.
	(grub_video_fbblit_blend_BGRA8888_RGBA8888): Likewise.
	(grub_video_fbblit_blend_BGR888_RGBA8888): Likewise.
	(grub_video_fbblit_blend_RGBA8888_RGBA8888): Likewise.
	(grub_video_fbblit_blend_RGB888_RGBA8888): Likewise.